installer-downloader/tests/snapshots/controller__cached_app.snap
---
source: installer-downloader/tests/controller.rs
expression: delegate.state
---
status_text: ""
download_text: ""
download_button_visible: false
cancel_button_visible: false
cancel_button_enabled: false
download_button_enabled: false
download_progress: 0
download_progress_visible: false
beta_text_visible: false
stable_text_visible: false
error_message_visible: true
error_message:
  status_text: "Failed to fetch new version details, please try again or install the already downloaded version (2042.1337)."
  cancel_button_text: Install
  retry_button_text: Try again
quit: false
call_log:
  - hide_download_progress
  - show_download_button
  - disable_download_button
  - hide_cancel_button
  - hide_beta_text
  - hide_stable_text
  - on_download
  - on_cancel
  - on_beta_link
  - on_stable_link
  - show_download_button
  - "set_status_text: Loading version details..."
  - hide_error_message
  - hide_download_button
  - clear_status_text
  - on_error_message_retry
  - "show_error_message: Failed to fetch new version details, please try again or install the already downloaded version (2042.1337).. retry: Try again. cancel: Install"
  - on_error_message_cancel
