installer-downloader/tests/snapshots/controller__failed_fetch_version-2.snap
---
source: installer-downloader/tests/controller.rs
expression: delegate.state
snapshot_kind: text
---
status_text: "Version: 2025.1"
download_text: ""
download_button_visible: true
cancel_button_visible: false
cancel_button_enabled: false
download_button_enabled: true
download_progress: 0
download_progress_visible: false
beta_text_visible: false
stable_text_visible: false
error_message_visible: false
error_message:
  status_text: "Failed to load version details, please try again or make sure you have the latest installer loader."
  cancel_button_text: Cancel
  retry_button_text: Try again
quit: false
call_log:
  - hide_download_progress
  - show_download_button
  - disable_download_button
  - hide_cancel_button
  - hide_beta_text
  - hide_stable_text
  - on_download
  - on_cancel
  - on_beta_link
  - on_stable_link
  - show_download_button
  - "set_status_text: Loading version details..."
  - hide_error_message
  - hide_download_button
  - clear_status_text
  - on_error_message_retry
  - "show_error_message: Failed to load version details, please try again or make sure you have the latest installer loader.. retry: Try again. cancel: Cancel"
  - on_error_message_cancel
  - show_download_button
  - "set_status_text: Loading version details..."
  - hide_error_message
  - "set_status_text: Version: 2025.1"
  - enable_download_button
