installer-downloader/tests/snapshots/controller__fetch_version.snap
---
source: installer-downloader/tests/controller.rs
expression: delegate.state
---
status_text: ""
download_text: ""
download_button_visible: true
cancel_button_visible: false
cancel_button_enabled: false
download_button_enabled: false
download_progress: 0
download_progress_visible: false
beta_text_visible: false
stable_text_visible: false
error_message_visible: false
error_message: ""
quit: false
call_log:
  - hide_download_progress
  - show_download_button
  - disable_download_button
  - hide_cancel_button
  - hide_beta_text
  - hide_stable_text
  - on_download
  - on_cancel
  - on_beta_link
  - on_stable_link
